overlap issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -353,3 +353,6 @@ font-size: 13px;
 .image5{
   height: 520px;
 }
+.golu{
+  background-color: #f4a51c;
+}
